// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a collapsed expandable BlockCard 1`] = `
<div
  className="card bg-dark block-card text-white"
  data-block-id="1"
  data-block-type="mock"
>
  <div
    className="card-header"
  >
    <a
      onClick={[Function]}
    >
      Mocked Block
      <i
        className="fas fa-caret-down collapsed"
      />
    </a>
  </div>
  <div
    aria-expanded={null}
    className="collapse"
  >
    <div
      className="card-body"
    >
      <p>
        mocked card content
      </p>
    </div>
  </div>
</div>
`;

exports[`renders a collapsed expandable BlockCard with not valid data 1`] = `
<div
  className="card bg-dark block-card text-white"
  data-block-id="1"
  data-block-type="mock"
>
  <div
    className="card-header"
  >
    <a
      onClick={[Function]}
    >
      <i
        className="fas fa-exclamation-triangle"
      />
      Mocked Block
      <i
        className="fas fa-caret-down collapsed"
      />
    </a>
  </div>
  <div
    aria-expanded={null}
    className="collapse"
  >
    <div
      className="card-body"
    >
      <p>
        mocked card content
      </p>
    </div>
  </div>
</div>
`;

exports[`renders a collapsed not-expandable BlockCard 1`] = `
<div
  className="card bg-dark block-card text-white"
  data-block-id="1"
  data-block-type="mock"
>
  <div
    className="card-header"
  >
    <a
      onClick={[Function]}
    >
      Mocked Block
      <i
        className="fas fa-caret-down collapsed"
      />
    </a>
  </div>
  <div
    aria-expanded={null}
    className="collapse"
  >
    <div
      className="card-body"
    >
      <p>
        mocked card content
      </p>
    </div>
  </div>
</div>
`;

exports[`renders a expanded BlockCard 1`] = `
<div
  className="card bg-dark block-card text-white"
  data-block-id="1"
  data-block-type="mock"
>
  <div
    className="card-header"
  >
    <a
      onClick={[Function]}
    >
      Mocked Block
      <i
        className="fas fa-caret-down expanded"
      />
    </a>
  </div>
  <div
    aria-expanded={null}
    className="collapse show"
  >
    <div
      className="card-body"
    >
      <p>
        mocked card content
      </p>
    </div>
  </div>
</div>
`;
